--- a/TCY/TMS/TMSFMXWebGMapsPkgDXE6.dproj
+++ b/TCY/TMS/TMSFMXWebGMapsPkgDXE6.dproj
@@ -278,8 +278,81 @@
                     <VersionInfoKeys Name="UISupportedInterfaceOrientations"/>
                 </VersionInfoKeys>
                 <Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACCommon200.bpl">Embarcadero FireDAC Common Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDAC200.bpl">Embarcadero FireDAC Database Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACSqliteDriver200.bpl">Embarcadero FireDAC Sqlite Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACCommonDriver200.bpl">Embarcadero FireDAC Common Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACInfxDriver200.bpl">Embarcadero FireDAC Infx Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACODBCDriver200.bpl">Embarcadero FireDAC ODBC Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACDb2Driver200.bpl">Embarcadero FireDAC Db2 Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACMSSQLDriver200.bpl">Embarcadero FireDAC MSSQL Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACOracleDriver200.bpl">Embarcadero FireDAC Oracle Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\vclFireDAC200.bpl">Embarcadero FireDAC VCL Forms Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\vcldb200.bpl">Embarcadero Database Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bindengine200.bpl">Embarcadero LiveBindings Runtime Package</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACPgDriver200.bpl">Embarcadero FireDAC PostgreSQL Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACASADriver200.bpl">Embarcadero FireDAC ASA Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACMSAccDriver200.bpl">Embarcadero FireDAC MS Access Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACIBDriver200.bpl">Embarcadero FireDAC IB Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACMySQLDriver200.bpl">Embarcadero FireDAC MySQL Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACADSDriver200.bpl">Embarcadero FireDAC ADS Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\fmxFireDAC200.bpl">Embarcadero FireDAC FMX Forms Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\vclribbon200.bpl">Embarcadero Ribbon Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\VclSmp200.bpl">Embarcadero Sample Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\MetropolisUILiveTile200.bpl">Embarcadero Metropolis UI Live Tile Component Library</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bindcompvcl200.bpl">Embarcadero LiveBindings Components VCL</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\vcldsnap200.bpl">Embarcadero Vcl DataSnap Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dsnap200.bpl">Embarcadero DataSnap Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\inetdb200.bpl">Embarcadero Internet/World Wide Web database components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dbexpress200.bpl">Embarcadero dbExpress Database Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXSqliteDriver200.bpl">Embarcadero Sqlite Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXMySQLDriver200.bpl">Embarcadero MySQL Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXInterBaseDriver200.bpl">Embarcadero InterBase Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dbxcds200.bpl">Embarcadero SimpleDataSet Component (DBX)</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\soapmidas200.bpl">Embarcadero SOAP Midas Runtime Package</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\soapserver200.bpl">Embarcadero SOAP Server Runtime Package</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dsnapcon200.bpl">Embarcadero DataSnap Connection Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DataSnapServer200.bpl">Embarcadero DataSnap Server Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DataSnapNativeClient200.bpl">Embarcadero DataSnap Native Client Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXOdbcDriver200.bpl">Embarcadero ODBC Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXFirebirdDriver200.bpl">Embarcadero Firebird Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXSybaseASEDriver200.bpl">Embarcadero SybaseASE Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXSybaseASADriver200.bpl">Embarcadero SybaseASA Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXOracleDriver200.bpl">Embarcadero Oracle Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXMSSQLDriver200.bpl">Embarcadero MSSQL Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXInformixDriver200.bpl">Embarcadero Informix Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DBXDb2Driver200.bpl">Embarcadero Db2 Client</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DataSnapIndy10ServerTransport200.bpl">Embarcadero DataSnap Server Transport Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DataSnapServerMidas200.bpl">Embarcadero DataSnap Server Midas Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bdertl200.bpl">Embarcadero BDE Database Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\fmxobj200.bpl">Embarcadero FMX OBJ Import Library</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\fmxdae200.bpl">Embarcadero FMX DAE Import Library</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\fmxase200.bpl">Embarcadero FMX ASE Import Library</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\svnui200.bpl">User interface code for subversion integration</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\bindcompfmx200.bpl">Embarcadero LiveBindings Components Firemonkey</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\tethering200.bpl">Tethering Component</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\vcldbx200.bpl">Embarcadero Compatibility Database Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\vcltouch200.bpl">Embarcadero Touch VCL Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\vclib200.bpl">Embarcadero InterBase Express VCL Controls</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\ibxpress200.bpl">Embarcadero InterBase Express Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\adortl200.bpl">Embarcadero ADO Database Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\IndyIPClient200.bpl">Embarcadero IP Indy Client Implementation</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\IndyIPCommon200.bpl">Embarcadero IP Indy Common Implementation</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\IndySystem200.bpl">Indy 10 System</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\IndyCore200.bpl">Indy 10 Core</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\IndyIPServer200.bpl">Embarcadero IP Indy Server Implementation</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\RESTBackendComponents200.bpl">Embarcadero REST-Backend Components (Runtime)</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\VCLRESTComponents200.bpl">Embarcadero REST Client Components VCL</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\RESTComponents200.bpl">Embarcadero REST Client Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\CloudService200.bpl">Embarcadero Cloud Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DatasnapConnectorsFreePascal200.bpl">Embarcadero DataSnap Free Pascal Connector</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DataSnapConnectors200.bpl">Embarcadero DataSnap Connector Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\DataSnapProviderClient200.bpl">Embarcadero DBExpress DataSnap Provider Client Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\TeeUI9200.bpl">TeeChart User Interface Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACDBXDriver200.bpl">Embarcadero FireDAC DBX Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\FireDACDSDriver200.bpl">Embarcadero FireDAC DataSnap Driver Components</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Public\Documents\Embarcadero\Studio\14.0\Bpl\DCEF_XE5.bpl">File C:\Users\Public\Documents\Embarcadero\Studio\14.0\Bpl\DCEF_XE5.bpl not found</Excluded_Packages>
                     <Excluded_Packages Name="C:\Users\LuizFernando\Desktop\GIT\TCY\trunk\TMS\Win32\TMSFMXPackPkgDXE6.bpl">File C:\Users\LuizFernando\Desktop\GIT\TCY\trunk\TMS\Win32\TMSFMXPackPkgDXE6.bpl not found</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Users\LuizFernando\Desktop\GIT\TCY\trunk\TMS\Win32\TMSFMXWebGMapsPkgDXE6.bpl">File C:\Users\LuizFernando\Desktop\GIT\TCY\trunk\TMS\Win32\TMSFMXWebGMapsPkgDXE6.bpl not found</Excluded_Packages>
                     <Excluded_Packages Name="C:\Users\LuizFernando\Desktop\GIT\TCY\trunk\TMS\Win32\TMSFMXPackPkgDEDXE6.bpl">File C:\Users\LuizFernando\Desktop\GIT\TCY\trunk\TMS\Win32\TMSFMXPackPkgDEDXE6.bpl not found</Excluded_Packages>
                 </Excluded_Packages>
             </Delphi.Personality>
