--- a/TCY/TMS/Android/AndroidManifest.xml
+++ b/TCY/TMS/Android/AndroidManifest.xml
@@ -6,27 +6,26 @@
         android:versionName="1.0.0">
 
     <!-- This is the platform API where NativeActivity was introduced. -->
-    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19" />
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="11" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:persistent="False" 
         android:restoreAnyVersion="False" 
         android:label="TMSFMXWebGMapsPkgDXE6" 
         android:installLocation="preferExternal" 
-        android:debuggable="False" 
+        android:debuggable="True" 
         android:largeHeap="False"
         android:icon="@drawable/ic_launcher"
-        android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
-        android:hardwareAccelerated="True">
+        android:theme="@android:style/Theme.NoTitleBar"
+        android:hardwareAccelerated="true">
         <!-- Our activity is a subclass of the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
         <activity android:name="com.embarcadero.firemonkey.FMXNativeActivity"
-                  android:label="TMSFMXWebGMapsPkgDXE6"
-                  android:configChanges="orientation|keyboardHidden">
-				  
+                android:label="TMSFMXWebGMapsPkgDXE6"
+                android:configChanges="orientation|keyboardHidden">
             <!-- Tell NativeActivity the name of our .so -->
             <meta-data android:name="android.app.lib_name"
-                       android:value="TMSFMXWebGMapsPkgDXE6" />
+                android:value="TMSFMXWebGMapsPkgDXE6" />
             <intent-filter>  
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
