--- a/TCY/TopDasGalaxia.dproj
+++ b/TCY/TopDasGalaxia.dproj
@@ -277,6 +277,10 @@
             <Form>FMapGMaps</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="Sources\MapImage.pas">
+            <Form>FMain1</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
