--- a/TCY/MapImage/MapImage.dproj
+++ b/TCY/MapImage/MapImage.dproj
@@ -478,7 +478,7 @@
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
             </Deployment>
             <Platforms>
-                <Platform value="Android">True</Platform>
+                <Platform value="Android" ActiveMobileDevice="LG-V500-00f824ffdd4b0a02">True</Platform>
                 <Platform value="iOSDevice">False</Platform>
                 <Platform value="iOSSimulator">False</Platform>
                 <Platform value="OSX32">False</Platform>
